--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -8,11 +8,40 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="../css/style.css"/>
-    <link rel="stylesheet" href="./css/member.css"/>
+    <link rel="stylesheet" href="../member/css/member.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <script> // 스크립트 작성해야함
+		$(function(){
+			$('.agree').click(function(){
+				
+				const chk1 = $('input[name=agree1]').is(':checked');
+				const chk2 = $('input[name=agree2]').is(':checked');
+				const chk3 = $('input[name=agree3]').is(':checked');
+				const chk4 = $('input[name=agree4]').is(':checked');
+				
+				if(!chk1){
+					alert('사이트 이용약관에 동의체크 하시기 바랍니다.');
+					return false;
+				}
+				
+				if(!chk2){
+					alert('전자금융거래 이용약관에 동의체크 하시기 바랍니다.');
+					return false;
+				}
+				
+				if(!chk3){
+					alert('개인정보 취급방침 약관에 동의체크 하시기 바랍니다.');
+					return false; // .agree click 할 때 false이니까 submit 실행 안됨
+				}
+				
+				return true; // .agree click 할 때 true이면 submit 기능이 실행된다
+			});
+		});
+	</script>
+    
 </head>
 <body>
     <div id="wrapper">
@@ -27,7 +56,7 @@
 					<section>
 						<h3><span class="essential">(필수)</span>케이마켓 이용약관</h3>
 						<!-- <textarea class="terms" readonly>[[${termsDTO.terms}]]</textarea> JSP에서는 이렇게, 만약 getTerms() 쓸거면 괄호까먹지말기 -->
-						<textarea class="terms" readonly th:text="${type eq 'normal' ? termsDTO.terms : termsDTO.tax}"></textarea>
+						<textarea class="terms" readonly th:text="${type eq 'normal' ? termsDTO.terms : termsDTO.tax}"></textarea> <!-- th:text 속성으로 -->
 						<label><input type="checkbox" name="agree1" />동의합니다.</label>
 	
 						<h3><span class="essential">(필수)</span>전자금융거래 이용약관</h3>
@@ -38,7 +67,7 @@
 						<textarea class="privacy" readonly>[[${termsDTO.privacy}]]</textarea>
 						<label><input type="checkbox" name="agree3" />동의합니다.</label>
 					</section>
-	
+					<!--<c:if test="${type eq 'normal'}"> JSP에서는 이렇게-->
 					<th:block th:if="${type eq 'normal'}">
 						<section>
 							<h3><span class="optional">(선택)</span>위치정보 이용약관</h3>
@@ -46,6 +75,8 @@
 							<label><input type="checkbox" name="agree4" />동의합니다.</label>
 						</section>
 					</th:block>
+					
+					<!-- 전체동의 script, css 작업할 것 -->
 									
 					<div>
 						<input type="submit" class="agree" value="동의하기" />
