--- a/src/main/resources/templates/member/register.html
+++ b/src/main/resources/templates/member/register.html
@@ -13,6 +13,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <script src="../member/js/validation.js"></script> <!-- static에 있는 파일 경로 이렇게 설정해줘야함 -->
+    <script src="../member/js/checkUser.js"></script>
+    <script src="../member/js/zipcode.js"></script>
+    <script>
+	//auto hyphen
+	const hypenTel = (target) => {
+		target.value = target.value
+				.replace(/[^0-9]/g, '')
+				.replace(/^(\d{0,3})(\d{0,4})(\d{0,4})$/g, "$1-$2-$3").replace(/(\-{1,2})$/g, "");
+	}
+
+	</script>
 </head>
 <body>
     <div id="wrapper">
@@ -22,25 +34,32 @@
                 <nav>
                     <h1>일반 회원가입</h1>
                 </nav>
-				<form th:action="@{/member/register}" method="POST">
+				<form id="formMember" th:action="@{/member/register}" method="POST">
 					<section>
 						<table>
 							<caption>필수 정보입력</caption>
 							<tr>
 								<th><span class="essential">*</span>아이디</th>
-								<td><input type="text" name="uid" placeholder="아이디를 입력"
-									required /> <span class="msgId">영문, 숫자로 4~12자까지 설정해 주세요.</span></td>
+								<td>
+									<input type="text" name="uid" placeholder="아이디를 입력" required /> 
+									<span class="msgId">영문, 숫자로 4~12자까지 설정해 주세요.</span>
+									<span class="resultId"></span>
+								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호</th>
-								<td><input type="password" name="pass1" placeholder="비밀번호를 입력"
-									required /> <span class="msgPass">영문, 숫자, 특수문자를 조합하여
-										8~12자까지 설정해 주세요.</span></td>
+								<td>
+									<input type="password" name="pass1" placeholder="비밀번호를 입력" required /> 
+									<span class="msgPass">영문, 숫자, 특수문자를 조합하여 8~12자까지 설정해 주세요.</span>
+								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호확인</th>
-								<td><input type="password" name="pass2" placeholder="비밀번호를 확인"
-									required /> <span class="msgPass">비밀번호 재입력</span></td>
+								<td>
+									<input type="password" name="pass2" placeholder="비밀번호를 확인" required /> 
+									<span class="msgPass">비밀번호 재입력</span>
+									<span class="resultPass"></span>
+								</td>
 							</tr>
 						</table>
 					</section>
@@ -49,32 +68,38 @@
 							<caption>기본 정보입력</caption>
 							<tr>
 								<th><span class="essential">*</span>이름</th>
-								<td><input type="text" name="name" placeholder="이름을 입력"
-									required /></td>
+								<td>
+									<input type="text" name="name" placeholder="이름을 입력" required />
+									<span class="resultName"></span>
+								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>성별</th>
-								<td><label><input type="radio" name="gender"
-										value="1" checked>&nbsp;남</label> <label><input
-										type="radio" name="gender" value="2">&nbsp;여</label></td>
+								<td>
+									<label><input type="radio" name="gender" value="1" checked>&nbsp;남</label> 
+									<label><input type="radio" name="gender" value="2">&nbsp;여</label>
+								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>EMAIL</th>
-								<td><input type="email" name="email" placeholder="이메일 입력"
-									required /></td>
+								<td>
+									<input type="email" name="email" placeholder="이메일 입력" required />
+									<span id="resultEmail"></span>
+								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>휴대폰</th>
-								<td><input type="text" name="hp" maxlength="13"
-									placeholder="휴대폰번호 입력" required /> <span class="msgHp"> -
-										포함 13자리를 입력하세요.</span></td>
+								<td>
+									<input type="text" name="hp" maxlength="13" placeholder="휴대폰번호 입력" required /> 
+									<span class="msgHp"> - 포함 13자리를 입력하세요.</span>
+									<span id="resultHp"></span>
+								</td>
 							</tr>
 							<tr class="addr">
 								<th>주소</th>
 								<td>
 									<div>
-										<input type="text" name="zip" id="zip" placeholder="우편번호 입력 클릭"
-											readonly />
+										<input type="text" name="zip" id="zip" placeholder="우편번호 입력 클릭" onclick="zipcode()" readonly /><!--zipcode 왜 적용 안되지?? -->
 									</div>
 									<div>
 										<input type="text" name="addr1" id="addr1" size="50"
