카테고리 불러오기 삭제 완료

--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -643,7 +643,19 @@ button[type=submit] {
     margin-top: 10px;
 }
 
-#admin-cs-list > section > .csWrite {
+#admin-cs-list > section > .noticeWrite {
+    float: right;
+    width: 100px;
+    margin-top: 10px;
+}
+
+#admin-cs-list > section > .faqWrite {
+    float: right;
+    width: 100px;
+    margin-top: 10px;
+}
+
+#admin-cs-list > section > .qnaWrite {
     float: right;
     width: 100px;
     margin-top: 10px;
