--- a/src/main/resources/templates/admin/layout/cs/faqlist.html
+++ b/src/main/resources/templates/admin/layout/cs/faqlist.html
@@ -43,14 +43,14 @@
                     <td><a th:href="@{/admin/layout/cs/faqview(no=${faqlist.no})}">[[${faqlist.title}]]</a></td>
                    	<td>[[${#temporals.format(faqlist.rdate, 'yy-MM-dd')}]]</td>
                     <td>
-						<a th:href="@{/admin/layout/cs/faqModify(no=${faqlist.no})}">[수정]</a>
-                        <a th:href="@{/admin/layout/cs/faqDelete(no=${faqlist.no})}">[삭제]</a>
+						<a href="#" class="faqModify">[수정]</a>
+                        <a href="#" class="faqDelete">>[삭제]</a>
                     </td>                   
                 </tr>
             </table>
             
             <input type="button" value="선택 삭제" class="csDelete"/>
-            <input type="button" value="글 작성" class="csWrite"/>
+            <input type="button" value="글 작성" class="faqWrite"/>
             		
         </section>
     </section>
