--- a/src/main/resources/templates/admin/layout/cs/faqview.html
+++ b/src/main/resources/templates/admin/layout/cs/faqview.html
@@ -30,8 +30,8 @@ layout:decorate="/admin/index.html">
 					감사합니다.<br/></td>
 				</tr>
 			</table>
-            <a th:href="@{/admin/layout/cs/faqDelete(no=${faqlist.no})}" class="btnViewDelete">삭제</a>
-            <a th:href="@{/admin/layout/cs/faqModify(no=${faqlist.no})}" class="btnViewModify">질문수정</a>
-            <a th:href="@{/admin/layout/cs/faqlist(no=${faqlist.no}, pg=1, group=2)}" class="btnList">목록</a>
+			<a th:href="@{/admin/layout/cs/faqlist(no=${faqview.no}, pg=1, group=2)}" class="btnList">목록</a>
+            <a th:href="@{/admin/layout/cs/faqModify(no=${faqview.no}, group=2)}" class="btnViewModify">질문수정</a>
+            <a th:href="@{/admin/layout/cs/faqDelete(no=${faqview.no})}" class="btnViewDelete">삭제</a>
 		</article>
 	</section>
