--- a/src/main/resources/templates/admin/layout/cs/qnalist.html
+++ b/src/main/resources/templates/admin/layout/cs/qnalist.html
@@ -43,15 +43,14 @@
                     <td><a th:href="@{/admin/layout/cs/qnaview(no=${qnalist.no})}">[[${qnalist.title}]]</a></td>
                    	<td>[[${#temporals.format(qnalist.rdate, 'yy-MM-dd')}]]</td>
                     <td>
-						<a th:href="@{/admin/layout/cs/qnaModify(no=${qnalist.no})}">[수정]</a>
-                        <a th:href="@{/admin/layout/cs/qnaDelete(no=${qnalist.no})}">[삭제]</a>
+						<a href="#" class="qnaModify">[수정]</a>
+                        <a href="#" class="qnaDelete">>[삭제]</a>
                     </td>                   
                 </tr>
                 </c:forEach>
             </table>
             
             <input type="button" value="선택 삭제" class="csDelete"/>
-            <input type="button" value="답변 작성" class="csWrite"/>
 			
 			<div class="paging">
 		        <span th:if="${pageResponseDTO.prev}" class="prev" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
