--- a/src/main/resources/templates/admin/layout/cs/qnaview.html
+++ b/src/main/resources/templates/admin/layout/cs/qnaview.html
@@ -30,8 +30,8 @@ layout:decorate="/admin/index.html">
 					감사합니다.<br/></td>
 				</tr>
 			</table>
-			<a href="" class="btnList">목록</a>
-			<a href="" class="btnViewModify">답변작성</a>
-            <a href="" class="btnViewDelete">삭제</a>
+			<a th:href="@{/admin/layout/cs/qnalist(no=${qnaview.no}, pg=1, group=3)}" class="btnList">목록</a>
+			<a th:href="@{/admin/layout/cs/qnaModify(no=${qnaview.no}, group=3)}" class="btnViewModify">질문수정</a>
+            <a th:href="@{/admin/layout/cs/qnaDelete(no=${qnaview.no})}" class="btnViewDelete">삭제</a>  
 		</article>
 	</section>
