--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,6 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.thymeleaf.org/"
 	  layout:decorate="/deco.html">
->
 
 <main layout:fragment="content">
   <!-- 카테고리/베스트 상품 영역 -->
@@ -97,7 +96,7 @@
           <section class="hit">
             <h3><span>히트상품</span></h3>
             <article th:each="hit:${hit}">
-              <a href="#">
+              <a th:href="@{/product/productView(prodNo  = ${hit.prodNo})}">
                 <div class="thumb">
                   <img th:src="@{'./images/product/' + ${hit.thumb1}}" alt="t1" />
                 </div>
@@ -118,7 +117,7 @@
           <section class="recommend">
             <h3><span>추천상품</span></h3>
             <article th:each="score:${score}">
-              <a href="#">
+              <a th:href="@{/product/productView(prodNo  = ${score.prodNo})}">
                 <div class="thumb">
                   <img  th:src="@{'./images/product/' + ${score.thumb1}}" alt="t1" />
                 </div>
@@ -140,7 +139,7 @@
           <section class="new">
             <h3><span>최신상품</span></h3>
             <article th:each="newprod:${newprod}">
-              <a href="#">
+              <a th:href="@{/product/productView(prodNo  = ${newprod.prodNo})}">
                 <div class="thumb">
                   <img  th:src="@{'./images/product/' + ${newprod.thumb1}}" alt="t1" />
                 </div>
@@ -162,7 +161,7 @@
           <section class="discount">
             <h3><span>할인상품</span></h3>
             <article th:each="discount:${discount}">
-              <a href="#">
+              <a th:href="@{/product/productView(prodNo  = ${discount.prodNo})}">
                 <div class="thumb">
                   <img  th:src="@{'./images/product/' + ${discount.thumb1}}"alt="t1" />
                 </div>
