--- a/src/main/resources/templates/product/productOrder.html
+++ b/src/main/resources/templates/product/productOrder.html
@@ -1,112 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>product:Order</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-    <link rel="stylesheet" href="../css/style.css" />
-</head>
-<style>
-
-</style>
-<body>
-    <div id=" wrapper">
-        <header>
-            <div class="top">
-                <div>
-                    <a href="#">로그인</a>
-                    <a href="#">회원가입</a>
-                    <a href="#">마이페이지</a>
-                    <a href="#">
-                        <i class="fa fa-shopping-cart" aria-hidden="true">
-                            &nbsp;장바구니
-                        </i>
-                    </a>
-                </div>
-            </div>
-            <div class="logo">
-                <div>
-                    <a href="#"><img src="../images/header_logo.png" alt="로고"></a>
-                    <form action="#">
-                        <input type="text" name="keyword">
-                        <button>
-                            <i class="fa fa-search" aria-hidden="true"></i>
-                        </button>
-                    </form>
-                </div>
-            </div>
-            <div class="menu">
-                <div>
-                    <ul>
-                        <li><a href="#">히트상품</a></li>
-                        <li><a href="#">추천상품</a></li>
-                        <li><a href="#">최신상품</a></li>
-                        <li><a href="#">인기상품</a></li>
-                        <li><a href="#">할인상품</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="#">쿠폰존</a></li>
-                        <li><a href="#">사용후기</a></li>
-                        <li><a href="#">개인결제</a></li>
-                        <li><a href="#">고객센터</a></li>
-                        <li><a href="#">FAQ</a></li>
-                    </ul>
-                   
-                </div>
-            </div>
-        </header>
-        <main id="product">
-            <aside>
-                <ul class="category">
-                    <li><i class="fa fa-bars" aria-hidden="true"></i>카테고리</li>
-                    <li>
-                        <a href="#"><i class="fas fa-tshirt" aria-hidden="true"></i>패션·의류·뷰티</a>
-                        <ol>
-                            <li><a href="#">남성의류</a></li>
-                            <li><a href="#">여성의류</a></li>
-                            <li><a href="#">잡화</a></li>
-                            <li><a href="#">뷰티</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fas fa-laptop" aria-hidden="true"></i>가전·디지털</a>
-                        <ol>
-                            <li><a href="#">노트북</a></li>
-                            <li><a href="#">가전</a></li>
-                            <li><a href="#">휴대폰</a></li>
-                            <li><a href="#">기타</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fas fa-utensils" aria-hidden="true"></i>식품·생필품</a>
-                        <ol>
-                            <li><a href="#">신선식품</a></li>
-                            <li><a href="#">가공식품</a></li>
-                            <li><a href="#">건강식품</a></li>
-                            <li><a href="#">생필품</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fas fa-home" aria-hidden="true"></i>홈·문구·취미</a>
-                        <ol>
-                            <li><a href="#">가구/DIY</a></li>
-                            <li><a href="#">침구·커튼</a></li>
-                            <li><a href="#">생활용품</a></li>
-                            <li><a href="#">사무용품</a></li>
-                        </ol>
-                    </li>
-                </ul>
-            </aside>
-            <!-- 주문 페이지 시작-->
-            <section class="order">
-  
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.thymeleaf.org/"
+	  layout:decorate="/side.html">
+            <section layout:fragment="content" class="order">
               <!-- 제목, 페이지 네비게이션 -->
               <nav>
                 <h1>주문결제</h1>
@@ -128,54 +24,24 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr class="empty">
+                    <tr class="empty" th:if="${#lists.isEmpty(dto)}">
                       <td colspan="7">장바구니에 상품이 없습니다.</td>
                     </tr>
-                    <tr>
+                    <tr th:each="dto:${dto}">
                       <td>
                         <article>
-                          <a href="#"><img src="https://via.placeholder.com/80x80" alt=""></a>
+                          <a href="#"><img th:src="@{/images/product/}+${dto.prodNo.thumb1}" alt=""></a>
                           <div>
-                            <h2><a href="#">상품명</a></h2>
-                            <p>상품설명</p>
+                            <h2><a href="#">[[${dto.prodNo.prodName}]]</a></h2>
+                            <p>[[${dto.prodNo.descript}]]</p>
                           </div>
                         </article>
                       </td>
-                      <td>1</td>
-                      <td>27,000</td>
-                      <td>무료배송</td>
-                      <td>27,000</td>
+                      <td>[[${dto.count}]]</td>
+                      <td>[[${#numbers.formatInteger(dto.price,0,'COMMA')}]]</td>
+                      <td>[[${#numbers.formatInteger(dto.delivery,0,'COMMA')}]]</td>
+                      <td>[[${#numbers.formatInteger((dto.price * dto.count),0,'COMMA')}]]</td>
                     </tr>
-                    <tr>
-                      <td>
-                        <article>
-                          <a href="#"><img src="https://via.placeholder.com/80x80" alt=""></a>
-                          <div>
-                            <h2><a href="#">상품명</a></h2>
-                            <p>상품설명</p>
-                          </div>
-                        </article>
-                      </td>
-                      <td>1</td>
-                      <td>27,000</td>
-                      <td>무료배송</td>
-                      <td>27,000</td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <article>
-                          <a href="#"><img src="https://via.placeholder.com/80x80" alt=""></a>
-                          <div>
-                            <h2><a href="#">상품명</a></h2>
-                            <p>상품설명</p>
-                          </div>
-                        </article>
-                      </td>
-                      <td>1</td>
-                      <td>27,000</td>
-                      <td>무료배송</td>
-                      <td>27,000</td>
-                    </tr>                    
                   </tbody>
                 </table>                 
                 
@@ -301,42 +167,5 @@
                 </article>
               </form>
             </section>
-             <!-- 주문 페이지 끝-->
-        </main>
-        <footer>
-            <ul>
-                <li><a href="#">회사소개</a></li>
-                <li><a href="#">서비스이용약관</a></li>
-                <li><a href="#">개인정보처리방침</a></li>
-                <li><a href="#">전자금융거래약관</a></li>
-            </ul>
-            <div>
-                <p><img src="../images/footer_logo.png" alt="로고"></p>
-                <p>
-                    <strong>(주)KMARKET</strong>
-                    <br>
-                     부산시 강남구 테헤란로 152 (역삼동 강남파이낸스센터)
-                    <br>
-                     대표이사 : 홍길동
-                    <br>
-                    사업자등록번호 : 220-81-83676 사업자정보확인
-                    <br>
-                    통신판매업신고 : 강남 10630호 Fax : 02-589-8842
-                </p>
-                <p>
-                    <strong>고객센터</strong>
-                    <br>
-                     Tel : 1234-5678 (평일 09:00~18:00)
-                    <br>
-                    스마일클럽/SVIP 전용 : 1522-5700 (365일 09:00~18:00)
-                    <br>
-                    경기도 부천시 원미구 부일로 223(상동) 투나빌딩 6층
-                    <br>
-                    Fax : 051-123-4567 | Mail : kmarket@kmarket.co.kr
-                </p>
-            </div>
-        </footer>
-        <button type="button" id="top">상단이동</button>
-    </div>
-</body>
+
 </html>
