--- a/src/main/resources/templates/side.html
+++ b/src/main/resources/templates/side.html
@@ -118,7 +118,7 @@
           <li><a href="#">전자금융거래약관</a></li>
         </ul>
         <div>
-          <p><img src="./images/footer_logo.png" alt="로고"></p>
+          <p><img src="../images/footer_logo.png" alt="로고"></p>
           <p>
             <strong>(주)롯데ON</strong><br>
             서울특별시 송파구 올림픽로 300 롯데월드타워 26층 (역삼동 강남파이낸스센터)<br>
@@ -131,7 +131,7 @@
             <strong>고객센터</strong><br>
             Tel : 1899-7000(유료) (평일 09:00~18:00)<br>
             Fax : 051-123-4567 | E-mail : lotteon@lotte.net<br>
-            App Version:LotteON-0.0.2-SNAPSHOH
+            App Version:LotteON-0.0.6-SNAPSHOH
           </p>
         </div>
       </footer>
