--- a/src/main/resources/templates/cs/qna/qnaWrite.html
+++ b/src/main/resources/templates/cs/qna/qnaWrite.html
@@ -89,7 +89,7 @@
                   </tr>
                 </table>
                 <div>
-                  <a th:href="@{/cs/qna}" class="btnList">취소하기</a>
+                  <a th:href="@{/cs/qna(group=3)}" class="btnList">취소하기</a>
                   <input type="submit" class="btnSubmit" value="등록하기"/>
                 </div>
               </form>
