--- a/src/main/resources/templates/admin/layout/cs/faqWrite.html
+++ b/src/main/resources/templates/admin/layout/cs/faqWrite.html
@@ -10,20 +10,21 @@ layout:decorate="/admin/index.html">
 	            </p>
 	        </nav>
 	    <article>
-            <form action="${ctxPath}/admin/notice/write.do" method="post">
-            <input type="hidden" name="type" value="write"/>
-			<input type="hidden" name="uid" value="${sessUser.uid}"/>
+            <form action="/admin/layout/cs/faqWrite" method="post">
+			<input type="hidden" name="uid" value="admin"/>
                 <section>
                     <table>
                     	<tr>
 							<td>질문유형</td>
 							<td>
-								<!-- type1은 회원게시판에서 클릭했을 시 회원으로 설정되게끔. -->
-								<select name="cate1" id="cate1">
+								<select name="cate1" id="faqboardCate1">
 									<option value="0">1차 선택</option>
-									<c:forEach var="main_cate" items="${cate1List}">
-										<option value="${main_cate.cate1}" ${cate1 eq main_cate.cate1?'selected':''}>${main_cate.cate1_name}</option>
-									</c:forEach>
+										<option th:each="cate1 : ${cate1List}" th:value="${cate1.cate1}" th:selected="${cate1 eq selectedCate1}" th:text="${cate1.cate1_name}"></option>
+								</select>
+								<!--  type2는 jsonData로 받아와서 동적처리. -->
+								<select name="cate2" id="faqboardCate2">
+									<option value="0">2차 선택</option>
+										<option th:each="cate2 : ${cate2List}" th:value="${cate2.cate2}" th:text="${cate2.cate2_name}"></option>
 								</select>
 							</td>
 						</tr>
