--- a/src/main/resources/templates/member/fragment/_header.html
+++ b/src/main/resources/templates/member/fragment/_header.html
@@ -10,7 +10,7 @@
     </div>
     <div class="logo">
         <div>
-            <a href="../index.html"><img src="../images/header_logo.png" alt="로고"/></a>
+            <a th:href="@{/}"><img src="../images/header_logo.png" alt="로고"/></a> <!-- a태그 경로 : /(index로 가기) -->
         </div>
     </div>
 </header>
