--- a/src/main/resources/templates/product/productView.html
+++ b/src/main/resources/templates/product/productView.html
@@ -113,8 +113,8 @@
                             </div>
                         </nav>
                         <nav>
-                            <span class="delivery">[[${#numbers.formatInteger(dto.delivery,0,'COMMA')}]]</span>
-                            <span class="arrival">모레(금) 7/8 도착예정</span>
+                            <span class="delivery">[[${dto.delivery eq 0 ? '무료배송' : '배송비 ' + #numbers.formatInteger(dto.delivery,0,'COMMA') + ' 원'}]]</span> <!--[[${#numbers.formatInteger(dto.delivery,0,'COMMA')}]] -->
+                            <span class="arrival">[[${formatedNow}]] 도착예정</span>
                             <span class="desc">본 상품은 국내배송만 가능합니다.</span>
                         </nav>
                         <nav>
